# qt-app-spi-exchange

./: .gitignore  .gitmodules  CMakeLists.txt  bundle.sh
bundle/app-spi-exchange_2024-12-20_15-35-07_-linux/: app-spi-exchange.sh
bundle/app-spi-exchange_2024-12-20_15-35-07_-windows/: app-spi-exchange.bat
cmake/: LinuxToolChain.cmake  WindowsToolChain.cmake
ext/: CMakeLists.txt
include/: app_engine.h
include/extra/: idle_wait.h
include/gui/: arinc_bus_check_gui.h  board_exchange_logs.h  connection_page_gui.h  spi_page_gui.h
include/model/: logs_model.h
include/proto/: exchange.h  parser.h  proto.h
qml/: ArincBusCheck.qml  ArincBusCheckControls.qml  BoardExchangeLogs.qml  ConnectionPage.qml  InfoComponent.qml  Logs.qml  Main.qml  Main.qml.autosave  SpiControls.qml  SpiPage.qml  Status.qml
src/: app_engine.cpp  main.cpp  version.h
src/gui/: arinc_bus_check_gui.cpp  board_exchange_logs.cpp  connection_page_gui.cpp  spi_page_gui.cpp
src/model/: logs_model.cpp
src/proto/: crc16.cpp  crc16.h  exchange.cpp  parser.cpp  proto.cpp
